--- a/style.css
+++ b/style.css
@@ -1,3 +1,75 @@
-h1 {
-  color: blueviolet;
+h4 {
+  text-align: center;
 }
+
+h1 {
+  text-align: center;
+  text-decoration: underline;
+}
+
+.container{
+  width: 100%;
+  height: auto;
+  background: #1e8fcb;
+
+  /* add flexbox*/
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-flow: wrap;
+}
+
+.box1{
+  width: 200px;
+  height: 200px;
+  background: red;
+  margin: 20px;
+  box-sizing: border-box;
+  font-size: 50px;
+  
+}
+
+.box2{
+  width: 200px;
+  height: 200px;
+  background: red;
+  margin: 20px;
+  box-sizing: border-box;
+  font-size: 50px
+}
+.box3{
+  width: 200px;
+  height: 200px;
+  background: red;
+  margin: 20px;
+  box-sizing: border-box;
+  font-size: 50px
+}
+
+/* add responsive media quaries
+
+@media screen and (max-width:1200px){
+  .box1{
+    width: 40%;
+  }
+  .box2{
+    width: 40%;
+  }
+  .box3{
+    width: 40%;
+  }
+}
+
+
+@media screen and (max-width:600px){
+  .box1{
+    width: 90%;
+  }
+  .box2{
+    width: 90%;
+  }
+  .box3{
+    width: 90%;
+  }
+} */
