--- a/style.css
+++ b/style.css
@@ -19,25 +19,32 @@ h1 {
   justify-content: space-around;
   flex-flow: wrap;
 }
-
-#box1{
+.box {
   width: 200px;
   height: 200px;
-  background: #b84a62;
   margin: 20px;
   box-sizing: border-box;
   font-size: 50px;
   border: solid;
   border-color: #4c243b;
-  
 }
+ #box1{
+  width: 200px;
+  height: 200px;
+  background: red;
+  margin: 20px;
+  box-sizing: border-box;
+  font-size: 50px;
+  border: solid;
+  /* border-color: #4c243b; */
+  
+} 
 /* styles.css */
 
 .box1.changed {
   background-color: lightgreen;
   border: 2px solid darkgreen;
 }
-
 
 #box2{
   width: 200px;
@@ -57,8 +64,8 @@ h1 {
   box-sizing: border-box;
   font-size: 50px;
   border: solid;
-  border-color: #eac4d5
-}
+  /* border-color: #eac4d5 */
+} 
 
 /* add responsive media quaries
 
@@ -133,4 +140,8 @@ h5{
   flex-direction: row;
   justify-content: space-around;
   flex-flow: wrap;
+}
+
+.hidden {
+  display: none;
 }
